protocols/tests/multipliers/mult_d2/first_thread_fails.out
error: The two expressions did not evaluate to the same value
   ┌─ multipliers/mult_d2/mult_d2.prot:22:13
   │
22 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 3, RHS Value: 2

Trace 0 failed: Assertion(EqualityFailed { expr1_id: expr7, expr2_id: expr8, value1: ValueOwned(00000000000000000000000000000011), value2: ValueOwned(00000000000000000000000000000010) })
Trace 0 execution failed.
